# ncnnpy

./: CMakeLists.txt  LICENSE  README.md
cmake/: boost-python.cmake
install/: face_detector.py  face_recognition.py
src/: HDface.cpp  HDface.h  LNet.id.h  ONet.id.h  PNet.id.h  PNet.mem.h  RNet.id.h  RNet.mem.h  anchor_generator.cpp  anchor_generator.h  config.h  detector.cpp  detector.h  face_recog.id.h  face_recognition.h  hdetector.cpp  hdetector.h  ncnnpy.cpp  np2mat.hpp  npcvt.cpp  retinaface.id.h  utils.hpp
src/include/: np2mat.hpp  platform.h
